[gd_scene load_steps=5 format=3 uid="uid://d0ehxsilmfuld"]

[ext_resource type="Script" uid="uid://buxpkwaamke6h" path="res://creador_masos/creador_mazos.gd" id="1_i2b7i"]
[ext_resource type="PackedScene" uid="uid://jb56um3hyo22" path="res://creador_masos/selector_fichas.tscn" id="2_7phoa"]
[ext_resource type="PackedScene" uid="uid://bplltmcxhnq4v" path="res://creador_masos/mazo.tscn" id="3_7phoa"]

[sub_resource type="Theme" id="Theme_7phoa"]

[node name="CreadorMazos" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i2b7i")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectorFichas&Filtros" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectorFichas" parent="SelectorFichas&Filtros" instance=ExtResource("2_7phoa")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 340.0
offset_top = 41.0
offset_right = 1148.0
offset_bottom = 642.0

[node name="FaltantesCheckButton" type="CheckButton" parent="SelectorFichas&Filtros"]
layout_mode = 0
offset_left = 1027.0
offset_top = 4.0
offset_right = 1148.0
offset_bottom = 35.0
text = "Faltantes"

[node name="ListoButton" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 594.0
offset_right = 95.0
offset_bottom = 645.0
disabled = true
text = "Listo"

[node name="NombreMazoLineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 246.0
offset_bottom = 48.0
theme = SubResource("Theme_7phoa")
text = "nuevo mazo"

[node name="Mazo" parent="." instance=ExtResource("3_7phoa")]
layout_mode = 0
offset_left = 28.0
offset_top = 60.0
offset_right = 228.0
offset_bottom = 578.0

[node name="CancelarButton" type="Button" parent="."]
layout_mode = 0
offset_left = 114.0
offset_top = 603.0
offset_right = 190.0
offset_bottom = 634.0
text = "Cancelar"

[connection signal="casilla_ficha_escogible_clickeado" from="SelectorFichas&Filtros/SelectorFichas" to="Mazo" method="_on_selector_fichas_casilla_ficha_escogible_clickeado"]
[connection signal="toggled" from="SelectorFichas&Filtros/FaltantesCheckButton" to="SelectorFichas&Filtros/SelectorFichas" method="_on_faltantes_check_button_toggled"]
[connection signal="pressed" from="ListoButton" to="." method="_on_listo_button_pressed"]
[connection signal="text_changed" from="NombreMazoLineEdit" to="." method="_on_nombre_mazo_line_edit_text_changed"]
[connection signal="visibility_changed" from="Mazo" to="Mazo" method="_on_visibility_changed"]
[connection signal="pressed" from="CancelarButton" to="." method="_on_cancelar_button_pressed"]
